--- a/shapeofyou.html
+++ b/shapeofyou.html
@@ -18,7 +18,7 @@
       background: #ffffffcc;
       border-radius: 24px;
       box-shadow: 0 4px 16px #0001, 0 1.5px 8px #0002;
-      padding: 18px 16px;
+      /* padding: 18px 16px; */
       display: flex;
       align-items: center;
       justify-content: center;
